--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "python.pythonPath": "scraper/bin/python"
+    "python.pythonPath": "scraper/bin/python",
+    "java.project.referencedLibraries": [
+        "javafx-sdk-15.0.1/lib/**/*.jar",
+    ]
 }
